--- a/ferratum/index.html
+++ b/ferratum/index.html
@@ -184,7 +184,7 @@
 	  </div>     
 			  
  <div class="row"></div> <div class="row"><div class="cell femhundra hogk">
-		 <img decoding="async" alt="Högkostnadskredit"   src="../../../lastoffer.net/laana_pengar/media/hogkostnadskredit.webp" width="103" height="85"> 
+		 <img decoding="async" alt="Högkostnadskredit"   src="https://lastoffer.net/media/hogkostnadskredit.webp" width="103" height="85"> 
 		Om du inte kan betala tillbaka hela skulden riskerar du en betalningsanmärkning. För stöd, vänd dig till budget- och skuldrådgivningen i din kommun. Kontaktuppgifter finns på hallåkonsument.se</div>
   
 	</div></div>
@@ -196,28 +196,28 @@
 <div class="cell">
 <h3>Ferratum Trustpilot</h3>
 <p>Omdömen: 667</p>Trustpilot betyg:  3,8 av 5 (76 %)</p>
-<div class="trust"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg.webp" height="50px" width="250px" alt="Trustpilot ger Ferratum betyg 3.8 av 5" title="Trustpilot ger Ferratum betyg 3.8 av 5"></div> 
+<div class="trust"><img decoding="async" src="https://lastoffer.net/media/trustpilotbg.webp" height="50px" width="250px" alt="Trustpilot ger Ferratum betyg 3.8 av 5" title="Trustpilot ger Ferratum betyg 3.8 av 5"></div> 
 </div>
 
 <div class="cell rew">
  <p>2023-07-23</p>
 	 <h4>Snabb och smidig hjälp och ett STORT…</h4>
 	 <p>Snabb och smidig hjälp och ett STORT Pluss är att dom har den lägsta räntan när det kommer till kontokredit och du vill ta ett snabbt lån och slippa uc!</p>	
-	<div class="betyg_1"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Ferratum omdöme 5" title="Kund ger Ferratum betyg 5 av 5"></div>
+	<div class="betyg_1"><img decoding="async" src="https://lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Ferratum omdöme 5" title="Kund ger Ferratum betyg 5 av 5"></div>
  	</div>
 
 <div class="cell rew">
 	<p>2023-07-23</p>
 		<h4>Smidigt och snabbt….men dyrt.</h4>
 		<p>Snabb återkoppling och trevligt bemötande. Dock till ett högt pris.</p>	
-	<div class="betyg_2"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Ferratum omdöme 4" title="Kund ger Ferratum betyg 4 av 5"></div>
+	<div class="betyg_2"><img decoding="async" src="https://lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Ferratum omdöme 4" title="Kund ger Ferratum betyg 4 av 5"></div>
  </div>
 
 <div class="cell rew">
  <p>2023-07-26</p>
  <h4>De var trevliga och mänskliga vilket…</h4>
 	 <p>De var trevliga och mänskliga vilket inte min egen bank var. Jag rekommenderar dig som behöver att välja denna långivare.</p>	
-	<div class="betyg_3"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Ferratum omdöme 5" title="Kund ger Ferratum betyg 5 av 5"></div>
+	<div class="betyg_3"><img decoding="async" src="https://lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Ferratum omdöme 5" title="Kund ger Ferratum betyg 5 av 5"></div>
  </div>
  
 <style>
