--- a/lan-svag-kreditvardighet/index.html
+++ b/lan-svag-kreditvardighet/index.html
@@ -1,15 +1,15 @@
 <HTML>
-<!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
-<!-- Mirrored from 127.0.0.1/laana_pengar/lan-svag-kreditvardighet/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 13 Apr 2025 15:50:24 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<HEAD>
+
+
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+<html lang="sv-SE">
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"><META HTTP-EQUIV="Refresh" CONTENT="0; URL=../"><TITLE>Page has moved</TITLE>
 </HEAD>
 <BODY>
 <A href="https://lastoffer.net/"><h3>Click here...</h3></A>
-<script type="text/javascript" src="https://cdn.adt558.com/atag.js?as=1047349355" charset="UTF-8"></script></body>
-<!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
+<script type="text/javascript" src="https://lastoffer.net/tps://cdn.adt558.com/atag.js?as=1047349355" charset="UTF-8"></script></body>
 
-<!-- Mirrored from 127.0.0.1/laana_pengar/lan-svag-kreditvardighet/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 13 Apr 2025 15:50:24 GMT -->
+
+
 </HTML>
